--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -5,13 +5,20 @@ body {
   font-size: 16px;
   font-weight: normal;
   color: #000;
+  background-color: #f5f5f5;
 }
 
 .container {
   margin: auto;
+  margin-top: 20px;
+  padding: 10px;
   max-width: 500px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
 .title {
   font-weight: bold;
+  text-align: center;
 }
