--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,8 +1,19 @@
+.container {
+  display: flex;
+  align-items: flex-start;
+  min-height: 50px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 .item {
-  font-size: 15px;
+  width: 400px;
+  margin: 0;
+  padding-top: 7px;
 }
 
 .done {
   color: gray;
   text-decoration: line-through;
 }
+
