--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -8,17 +8,22 @@ body {
   background-color: #f5f5f5;
 }
 
+
 .container {
-  margin: auto;
-  margin-top: 20px;
-  padding: 10px;
-  max-width: 500px;
-  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.sidebar {
+  margin-right: 10px;
+  padding: 20px 20px 20px 20px;
   background-color: #fff;
+  border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
-.title {
-  font-weight: bold;
-  text-align: center;
+.link {
+  text-decoration: none;
+  color: #000;
 }
