--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,7 +1,14 @@
+
+* {
+  box-sizing: border-box;
+}
+
 .container {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  width: 700px;
+}
+
+.loader {
+  text-align: center;
 }
 
 .error {
@@ -13,10 +20,21 @@
   color: black;
 }
 
-.about {
-  display: flex;
-} 
+.image {
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
 
-.bio {
-  width: 300px;
+@media screen and (max-width:600px) {
+  .container {
+    width: 100%;
+  }
+  .imageLoader {
+    max-width: 200px;
+  }  
 }
