--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,14 +1,54 @@
 .footer {
-  
+  width: 600px;
+  padding-bottom: 20px;
 }
 
 .tasks {
-  margin-right: 15%;
-  padding-left: 15px;
+  margin-right: 20%;
+  padding-left: 25px;
   font-size: 13px;
 }
 
 .button {
  margin-right: 5%;
- 
+}
+
+.delete {
+  margin-left: 20px;
+}
+
+@media screen and (max-width: 720px) {
+  .footer {
+    width: 100%;
+    text-align: center;
+  }
+
+  .button {
+    margin-bottom: 10px;
+    margin-right: 0;
+   }
+
+   .tasks {
+    font-size: 13px;
+    margin-right: 1%;
+  }
+
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    width: 300px;
+    text-align: center;
+  }
+
+  .button {
+    margin-bottom: 10px;
+    margin-right: 0;
+   }
+
+   .tasks {
+    padding-left: 0;
+    font-size: 13px;
+    margin-right: 1%;
+  }
 }
