--- a/src/components/InputItems/InputItems.module.css
+++ b/src/components/InputItems/InputItems.module.css
@@ -1,9 +1,45 @@
-.container {
+.containerText {
   display: inline-block;
-  width: 450px;
+  width: 600px;
+  padding-left: 10px;
 }
 
 .containerFab {
   display: inline-block;
   padding-left: 10px;
+}
+
+.Fab {
+  top: 15px;
+}
+
+@media screen and (max-width: 720px) {
+
+  .container {
+    display: flex;
+    width: 95%;
+    padding-left: 10px;
+  }
+
+  .containerFab {
+    padding-left: 5px;
+  }
+
+  .Fab {
+    top: 10px;
+  }
+
+  .containerText {
+    width: 83%;
+  }
+  
+}
+
+@media screen and (max-width: 320px) {
+  .container {
+    display: flex;
+  }
+  .containerText {
+    width: 290px;
+  }
 }
