--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -1,13 +1,41 @@
+* {
+  box-sizing: border-box;
+}
 .container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: auto;
-  padding: 10px;
-  max-width: 500px;
+  width: 700px;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
 .title {
+  padding: 10px 0 0 0;
+  margin: 0;
   font-weight: bold;
   text-align: center;
+}
+
+@media screen and (max-width: 720px) {
+  .container {
+    width: 100%;
+  }
+
+  .title {
+    margin-bottom: 5px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .container {
+    width: 300px;
+  }
+
+  .title {
+    margin-bottom: 5px;
+  }
 }
